--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Jeeah and Hugh Wedding</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="/images/wedding.ico">
 </head>
 <body>
     <div class="content">
