--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     경기도 성남시 분당구 탄천상로<br>
                     151번길 20, 분당앤스퀘어 4층 오시는 길</p>
                     
-                    <p class="english">Bundang Nsquare, Amor Hall, Level 4<br>
+                    <p class="address english">Bundang Nsquare, Amor Hall, Level 4<br>
                     20, Tancheonsang-ro 151 beon-gil,<br>
                     Bundang-gu, Seongnam-si, Gyeonggi-do</p>
                 </div>
