update to separate divs for background

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <div class="content">
-        <div class="image-container">
-            <img src="images/Invitation_BG.jpeg" alt="Invitation Background">
+        <div class="sky">
             <div class="information">
                 <p class="opening-paragraph" lang="ko">평생의 기쁨과 슬픔을 함께 할 사람을 만났습니다.<br>
                 저희 두 사람, 하나되는 첫 걸음에<br>
@@ -67,6 +66,7 @@
                 <input type="hidden" id="accountNumber" value="110 485 953182"> 
             </div>
         </div>
+        <div class="image-container"></div>
     </div>
 </body>
 </html>
