add format and click outside image to close map

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <button lang="ko" class="show-account-details korean" onclick="showAccount()">마음 전하실곳</button>
                 <div id="accountDetailsContainer" class="hidden">
                     <p lang="ko" class="copy-account-number korean">정수진 • 신한은행 110 485 953182</p>
-                    <button class="copy korean" onclick="copyAccount()"><i id="copyIcon"
-                            class="fa-solid fa-copy"></i> 계좌번호 복사</button>
+                    <button class="copy korean" onclick="copyAccount()"><i id="copyIcon" class="fa-solid fa-copy"></i>
+                        계좌번호 복사</button>
                     <input type="hidden" id="accountNumber" value="110 485 953182">
                     <div class="tooltip" id="copyTooltip">복사 완료</div>
                 </div>
