--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Jeeah and Hugh Wedding</title>
     <meta name="robots" content="noindex">
+    <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="/images/wedding.ico">
