add closing paragraph

--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
                     <input type="hidden" id="accountNumber" value="110 485 953182">
                     <div class="tooltip" id="copyTooltip">복사 완료</div>
                 </div>
+
+                <p class="closing-paragraph korean">언제나 곁에서 응원해주시는<br>
+                    가족과 주변 지인분들께<br>
+                    진심으로 감사의 말씀 드립니다.<br>
+                    행복하게 잘 살겠습니다.<br>
+                </p>
+
+                <p class="closing-paragraph english">We would like to express our sincere<br> 
+                gratitude to our whānau and friends<br>
+                for their aroha and support.</p>
             </div>
         </div>
         <div class="image-container"></div>
