--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="robots" content="noindex">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="images/Invitation_BG.jpg">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="/images/wedding.ico">
     <link href="https://db.onlinewebfonts.com/c/0b450459366b32eaf5e8d79c6a3848cd?family=HYMyeongJo-Extra"
